all services added

--- a/templates/fsc/RainwaterHarvesting.html
+++ b/templates/fsc/RainwaterHarvesting.html
@@ -70,12 +70,20 @@
                   <a href="{% url 'services' %}">Services</a>
                   <ul class="sub-menu">
                       <li><a href="{% url 'services' %}">Services</a></li>
-                      <li><a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a></li>
                       <li><a href="{% url 'agroforestry' %}">Agroforestry and Silviculture</a></li>
-                      <li><a href="{% url 'OrganicManureProduction' %}">Organic Manure Productiony</a></li>
-                      <li><a href="{% url 'biogasGeneration' %}">Biogas Generation from Livestock Waste</a></li>
-                      <li><a href="{% url 'WasteManagement' %}">Waste Management and Value Addition</a></li>
-                      <li><a href="{% url 'RuralDevelopmentSolutions' %}">Other Activities (Integrated Rural Development Solutions)</a></li>
+                        <li><a href="{% url 'biogasGeneration' %}">Biogas Generation from Livestock Waste</a></li>
+                        <li><a href="{% url 'OrganicManureProduction' %}">Organic Manure Production</a></li>
+                        <li><a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a></li>
+                        <li><a href="{% url 'RuralDevelopmentSolutions' %}">Integrated Rural Development Solutions</a></li>
+                        <li><a href="{% url 'WasteManagement' %}">Waste Management and Value Addition</a></li>
+                        <li><a href="{% url 'plant_propagation' %}">Plant Propagation</a></li>
+                        <li ><a href="{% url 'mixed_farming' %}">Mixed Farming</a></li>
+                        <li><a href="{% url 'animal_production' %}">Support Activities for Animal Production</a></li>
+                        <li><a href="{% url 'post_harvest_crop' %}">Post-Harvest Crop Activities</a></li>
+                        <li><a href="{% url 'seed_processing' %}">Seed Processing for Propagation</a></li>
+                        <li><a href="{% url 'support_servicestoforestry' %}">Support Services to Forestry</a></li>
+                        <li><a href="{% url 'wholesale_of_agricultural' %}">Wholesale of Agricultural Raw Materials and Live Animals</a></li>
+                        <li><a href="{% url 'extraterritorial_organizations' %}">Activities of Extraterritorial Organizations and Bodies</a></li>
                   </ul>
               </li>
               <li>
@@ -133,7 +141,7 @@
             <div class="col col-md-9 col-md-push-3">
               <div class="service-single-content">
                 <div class="service-single-slider">
-                  <img src="assets/images/service-single/img-1.jpg" alt />
+                  <img src="{% static 'assets/images/service-single/img-1.jpg' %}" alt />
                 </div>
                 <h2>Rainwater Harvesting</h2>
                 <p>
@@ -283,39 +291,21 @@
               <div class="service-sidebar">
                 <div class="widget service-list-widget">
                   <ul>
-                    <li><a href="services.html">All Service</a></li>
-                    <li class="current">
-                      <a href="RainwaterHarvesting.html"
-                        >Rainwater Harvesting</a
-                      >
-                    </li>
-                    <li>
-                      <a href="Agroforestry.html"
-                        >Agroforestry and Silviculture</a
-                      >
-                    </li>
-                    <li>
-                      <a href="OrganicManureProduction.html"
-                        >Organic Manure Production</a
-                      >
-                    </li>
-                    <li>
-                      <a href="BiogasGeneration.html"
-                        >Biogas Generation from Livestock Waste</a
-                      >
-                    </li>
-                    <li>
-                      <a href="WasteManagement.html"
-                        >Waste Management and Value Addition</a
-                      >
-                    </li>
-                    <li>
-                      <a href="RuralDevelopmentSolutions.html"
-                        >Other Activities (Integrated Rural Development
-                        Solutions)</a
-                      >
-                    </li>
-                  </ul>
+                    <li><a href="{% url 'agroforestry' %}">Agroforestry and Silviculture</a></li>
+                    <li><a href="{% url 'biogasGeneration' %}">Biogas Generation from Livestock Waste</a></li>
+                    <li><a href="{% url 'OrganicManureProduction' %}">Organic Manure Production</a></li>
+                    <li class="current"><a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a></li>
+                    <li><a href="{% url 'RuralDevelopmentSolutions' %}">Integrated Rural Development Solutions</a></li>
+                    <li><a href="{% url 'WasteManagement' %}">Waste Management and Value Addition</a></li>
+                    <li><a href="{% url 'plant_propagation' %}">Plant Propagation</a></li>
+                    <li ><a href="{% url 'mixed_farming' %}">Mixed Farming</a></li>
+                    <li><a href="{% url 'animal_production' %}">Support Activities for Animal Production</a></li>
+                    <li><a href="{% url 'post_harvest_crop' %}">Post-Harvest Crop Activities</a></li>
+                    <li><a href="{% url 'seed_processing' %}">Seed Processing for Propagation</a></li>
+                    <li><a href="{% url 'support_servicestoforestry' %}">Support Services to Forestry</a></li>
+                    <li><a href="{% url 'wholesale_of_agricultural' %}">Wholesale of Agricultural Raw Materials and Live Animals</a></li>
+                    <li><a href="{% url 'extraterritorial_organizations' %}">Activities of Extraterritorial Organizations and Bodies</a></li>
+                </ul>
                 </div>
                 <div class="widget download-widget">
                   <ul>
