--- a/templates/fsc/contact.html
+++ b/templates/fsc/contact.html
@@ -122,13 +122,21 @@
               <li class="menu-item-has-children">
                   <a href="{% url 'services' %}">Services</a>
                   <ul class="sub-menu">
-                      <li><a href="{% url 'services' %}">Services</a></li>
-                      <li><a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a></li>
-                      <li><a href="{% url 'agroforestry' %}">Agroforestry and Silviculture</a></li>
-                      <li><a href="{% url 'OrganicManureProduction' %}">Organic Manure Productiony</a></li>
+                    <li><a href="{% url 'services' %}">Services</a></li>
+                    <li><a href="{% url 'agroforestry' %}">Agroforestry and Silviculture</a></li>
                       <li><a href="{% url 'biogasGeneration' %}">Biogas Generation from Livestock Waste</a></li>
+                      <li><a href="{% url 'OrganicManureProduction' %}">Organic Manure Production</a></li>
+                      <li><a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a></li>
+                      <li><a href="{% url 'RuralDevelopmentSolutions' %}">Integrated Rural Development Solutions</a></li>
                       <li><a href="{% url 'WasteManagement' %}">Waste Management and Value Addition</a></li>
-                      <li><a href="{% url 'RuralDevelopmentSolutions' %}">Other Activities (Integrated Rural Development Solutions)</a></li>
+                      <li><a href="{% url 'plant_propagation' %}">Plant Propagation</a></li>
+                      <li ><a href="{% url 'mixed_farming' %}">Mixed Farming</a></li>
+                      <li><a href="{% url 'animal_production' %}">Support Activities for Animal Production</a></li>
+                      <li><a href="{% url 'post_harvest_crop' %}">Post-Harvest Crop Activities</a></li>
+                      <li><a href="{% url 'seed_processing' %}">Seed Processing for Propagation</a></li>
+                      <li><a href="{% url 'support_servicestoforestry' %}">Support Services to Forestry</a></li>
+                      <li><a href="{% url 'wholesale_of_agricultural' %}">Wholesale of Agricultural Raw Materials and Live Animals</a></li>
+                      <li><a href="{% url 'extraterritorial_organizations' %}">Activities of Extraterritorial Organizations and Bodies</a></li>
                   </ul>
               </li>
               <li>
