--- a/templates/fsc/BiogasGeneration.html
+++ b/templates/fsc/BiogasGeneration.html
@@ -68,13 +68,21 @@
                   <li class="menu-item-has-children">
                       <a href="{% url 'services' %}">Services</a>
                       <ul class="sub-menu">
-                          <li><a href="{% url 'services' %}">Services</a></li>
-                          <li><a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a></li>
-                          <li><a href="{% url 'agroforestry' %}">Agroforestry and Silviculture</a></li>
-                          <li><a href="{% url 'OrganicManureProduction' %}">Organic Manure Productiony</a></li>
+                        <li><a href="{% url 'services' %}">Services</a></li>
+                        <li><a href="{% url 'agroforestry' %}">Agroforestry and Silviculture</a></li>
                           <li><a href="{% url 'biogasGeneration' %}">Biogas Generation from Livestock Waste</a></li>
+                          <li><a href="{% url 'OrganicManureProduction' %}">Organic Manure Production</a></li>
+                          <li><a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a></li>
+                          <li><a href="{% url 'RuralDevelopmentSolutions' %}">Integrated Rural Development Solutions</a></li>
                           <li><a href="{% url 'WasteManagement' %}">Waste Management and Value Addition</a></li>
-                          <li><a href="{% url 'RuralDevelopmentSolutions' %}">Other Activities (Integrated Rural Development Solutions)</a></li>
+                          <li><a href="{% url 'plant_propagation' %}">Plant Propagation</a></li>
+                          <li ><a href="{% url 'mixed_farming' %}">Mixed Farming</a></li>
+                          <li><a href="{% url 'animal_production' %}">Support Activities for Animal Production</a></li>
+                          <li><a href="{% url 'post_harvest_crop' %}">Post-Harvest Crop Activities</a></li>
+                          <li><a href="{% url 'seed_processing' %}">Seed Processing for Propagation</a></li>
+                          <li><a href="{% url 'support_servicestoforestry' %}">Support Services to Forestry</a></li>
+                          <li><a href="{% url 'wholesale_of_agricultural' %}">Wholesale of Agricultural Raw Materials and Live Animals</a></li>
+                          <li><a href="{% url 'extraterritorial_organizations' %}">Activities of Extraterritorial Organizations and Bodies</a></li>
                       </ul>
                   </li>
                   <li>
@@ -310,46 +318,21 @@
               <div class="service-sidebar">
                 <div class="widget service-list-widget">
                   <ul>
-                    <li><a href="services.html">All Service</a></li>
-                    <li>
-                      <a href="RainwaterHarvesting.html"
-                        >Rainwater Harvesting</a
-                      >
-                    </li>
-                    <li>
-                      <a href="Agroforestry.html"
-                        >Agroforestry and Silviculture</a
-                      >
-                    </li>
-                    <li>
-                      <a href="OrganicManureProduction.html"
-                        >Organic Manure Production</a
-                      >
-                    </li>
-                    <li class="current">
-                      <a href="BiogasGeneration.html"
-                        >Biogas Generation from Livestock Waste</a
-                      >
-                    </li>
-                    <li>
-                      <a href="WasteManagement.html"
-                        >Waste Management and Value Addition</a
-                      >
-                    </li>
-                    <li>
-                      <a href="RuralDevelopmentSolutions.html"
-                        >Other Activities (Integrated Rural Development
-                        Solutions)</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-                <div class="widget download-widget">
-                  <ul>
-                    <li>
-                      <a href="#"><i class="ti-zip"></i>Company presentation</a>
-                    </li>
-                  </ul>
+                    <li><a href="{% url 'agroforestry' %}">Agroforestry and Silviculture</a></li>
+                    <li class="current"><a href="{% url 'biogasGeneration' %}">Biogas Generation from Livestock Waste</a></li>
+                    <li><a href="{% url 'OrganicManureProduction' %}">Organic Manure Production</a></li>
+                    <li><a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a></li>
+                    <li><a href="{% url 'RuralDevelopmentSolutions' %}">Integrated Rural Development Solutions</a></li>
+                    <li><a href="{% url 'WasteManagement' %}">Waste Management and Value Addition</a></li>
+                    <li><a href="{% url 'plant_propagation' %}">Plant Propagation</a></li>
+                    <li ><a href="{% url 'mixed_farming' %}">Mixed Farming</a></li>
+                    <li><a href="{% url 'animal_production' %}">Support Activities for Animal Production</a></li>
+                    <li><a href="{% url 'post_harvest_crop' %}">Post-Harvest Crop Activities</a></li>
+                    <li><a href="{% url 'seed_processing' %}">Seed Processing for Propagation</a></li>
+                    <li><a href="{% url 'support_servicestoforestry' %}">Support Services to Forestry</a></li>
+                    <li><a href="{% url 'wholesale_of_agricultural' %}">Wholesale of Agricultural Raw Materials and Live Animals</a></li>
+                    <li><a href="{% url 'extraterritorial_organizations' %}">Activities of Extraterritorial Organizations and Bodies</a></li>
+                </ul>
                 </div>
                 <div class="widget contact-widget">
                   <div>
