--- a/templates/fsc/index.html
+++ b/templates/fsc/index.html
@@ -427,6 +427,11 @@
                   ></a>
                 </div>
               </div>
+
+               <!-- Read More button linking to All Services page -->
+                <div class="text-center">
+                  <a href="{% url 'services' %}" class="read-more-all">View All Services</a>
+              </div>
             </div>
           </div>
         </div>
