--- a/templates/fsc/index.html
+++ b/templates/fsc/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="irstheme" />
 
     <title>FSC Ltd - Rwanda</title>
+    <!-- <link rel="icon" href="{% static 'assets/images/favicon.ico' %}" type="image/x-icon" /> -->
 
     <link href="{% static 'assets/css/themify-icons.css' %}" rel="stylesheet" />
     <link href="{% static 'assets/css/flaticon.css' %}" rel="stylesheet" />
@@ -411,7 +412,7 @@
                   ></a>
                 </div>
                 <div class="grid">
-                  <img src="{% static 'assets/images/services/img-6.jpg ' %}" alt />
+                  <img src="{% static 'assets/images/services/img-6.jpg' %}" alt />
                   <h4>
                     <a href="RuralDevelopmentSolutions.html"
                       >Other Activities (Integrated Rural Development
